es-kibana-local/es-kibana-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: es-kibana
  labels:
    app: es-kibana
spec:
  containers:
    - image: "kibana:8.8.1"
      imagePullPolicy: IfNotPresent
      name: es-kibana
      ports:
        - containerPort: 5601
      resources:
        requests:
          memory: 1024Mi
          cpu: 300m
        limits:
          memory: 2048Mi
          cpu: 600m
  volumes:
    - name: data
      emptyDir: {}
