es-kibana-local/es-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: es
  labels:
    app: es
spec:
  containers:
    - image: "elasticsearch:8.8.1"
      imagePullPolicy: IfNotPresent
      name: es
      ports:
        - containerPort: 9200
      resources:
        requests:
          memory: 1024Mi
          cpu: 300m
        limits:
          memory: 4096Mi
          cpu: 600m
  volumes:
    - name: data
      emptyDir: {}
