es-kibana-local/es-kibana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: es-kibana-svc
  labels:
    app: es-kibana
spec:
  selector:
    app: es-kibana
  ports:
    - port: 5601
      targetPort: 5601
