es-kibana-local/es-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: es-svc
  labels:
    app: es
spec:
  selector:
    app: es
  ports:
    - port: 9200
      targetPort: 9200
